--- a/style.css
+++ b/style.css
@@ -210,3 +210,71 @@ i {
   outline: none;
   transform: translateY(5%);
 }
+
+/**********************************************
+*** MODAL
+**********************************************/
+
+.modal {
+  position: fixed;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  width: 40rem;
+  background-color: #f3f3f3;
+  padding: 20px;
+  box-shadow: 0 4rem 6rem rgba(0, 0, 0, 0.3);
+  z-index: 1000;
+  transition: all 0.5s;
+}
+
+.overlay {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(0, 0, 0, 0.5);
+  backdrop-filter: blur(4px);
+  z-index: 100;
+  transition: all 0.5s;
+}
+
+.modal-header {
+  margin: 0 auto;
+  width: 90%;
+  font-size: 35px;
+  margin-bottom: 20px;
+
+  text-align: center;
+}
+
+.game-list {
+  padding: 20px 40px;
+  list-style: circle;
+  line-height: 1.5;
+}
+.game-item {
+  font-size: 22px;
+}
+.game-item:not(:last-child) {
+  margin-bottom: 20px;
+}
+
+.btn-close-modal {
+  font-family: inherit;
+  color: inherit;
+  position: absolute;
+  top: 2%;
+  left: 95%;
+  /* transform: translate(-10%, -90%); */
+  font-size: 40px;
+  cursor: pointer;
+  border: none;
+  background: none;
+}
+
+.hidden {
+  visibility: hidden;
+  opacity: 0;
+}
